crates/wac-parser/tests/resolution/fail/target-import-param-type-mismatch.wac
package test:comp targets test:comp/foo;

world foo {
    import foo: interface {
        foo: func(a: u32);
    };
}

import foo2 as foo: interface {
    foo: func(a: string);
};
